[gd_scene load_steps=7 format=3 uid="uid://cryusl4j24lx1"]

[ext_resource type="Script" path="res://entities/platform/failing_platform/failing_platform.gd" id="1_kxoy8"]
[ext_resource type="PackedScene" uid="uid://dcvyipp3k0oxg" path="res://entities/platform/air_platform/air_platform.tscn" id="1_spb3i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jojrk"]
size = Vector2(42, 2)

[sub_resource type="Animation" id="Animation_o1fub"]
resource_name = "default"
loop_mode = 1

[sub_resource type="Animation" id="Animation_dtmji"]
resource_name = "trigger"
length = 3.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AirPlatform:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 3), Vector2(0, 0), Vector2(0, 0), Vector2(0, 720)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AirPlatform/AnimatedSprite2D:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f1wsl"]
_data = {
"default": SubResource("Animation_o1fub"),
"trigger": SubResource("Animation_dtmji")
}

[node name="FailingPlatform" type="Node2D"]
script = ExtResource("1_kxoy8")

[node name="AirPlatform" parent="." instance=ExtResource("1_spb3i")]

[node name="TriggerArea" type="Area2D" parent="AirPlatform"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AirPlatform/TriggerArea"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_jojrk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="AirPlatform"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_f1wsl")
}

[connection signal="body_entered" from="AirPlatform/TriggerArea" to="." method="_on_trigger_area_body_entered"]
[connection signal="screen_exited" from="AirPlatform/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="AirPlatform"]
